--- a/gene_essentiality.ipynb
+++ b/gene_essentiality.ipynb
@@ -1,11 +1,22 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Gene essentiality"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The authors perfomed a gene essentiality analysis to find which genes are important to still enable growth of the cells. Check how  they identified them.\n",
+    "\n",
+    "Check gene knockouts on COBRApy docs to identify this important genes per cell line.\n",
+    "\n",
+    "Compare your results. The authors compared their results with in-vitro data for validation (this would be very nice to do)."
+   ]
   }
  ],
  "metadata": {
